Подключены стили НКБ

--- a/src/nkb-app/styles/app.less
+++ b/src/nkb-app/styles/app.less
@@ -1,158 +1,8 @@
-/* Общие стили для всего приложения */
+/* НКБ стили */
+@import '../../../external_components/nullpointer-commons/nkb/styles/styles.less';
+
+/*
+* Общие стили для всего приложения
+*/
 
 @import './config.less';
-
-/* base */
-.simple-row:before,
-.simple-row:after {
-    display: table;
-    line-height: 0;
-    content: "";
-}
-.simple-row:after {
-    clear: both;
-}
-
-a {
-    padding-bottom: 0;
-    color: @linkColor;
-    text-decoration: none !important;
-    border-bottom: 1px solid transparent;
-}
-a.underline {
-    border-bottom-color: @linkUnderlineColor;
-}
-a:hover,
-a:focus,
-a:active {
-    color: @linkActiveColor;
-    cursor: pointer;
-}
-a.underline:hover,
-a.underline:focus,
-a.underline:active {
-    border-bottom-color: @linkActiveUnderlineColor;
-}
-
-a.disabled,
-a.disabled:hover,
-a.disabled:focus {
-    color: @defaultDisabledColor;
-    border-bottom-color: transparent;
-    cursor: default;
-}
-
-a.active.action,
-a.active.action:hover,
-a.active.action:focus,
-a.active.action:active,
-.active a.action,
-.active a.action:hover,
-.active a.action:focus,
-.active a.action:active {
-    color: @linkActiveColor !important;
-    cursor: default !important;
-}
-
-a.with-icon,
-a.with-icon.underline,
-a.with-icon.underline,
-a.with-icon.underline {
-    border-bottom: 0 none;
-}
-a.with-icon .text {
-    border-bottom: 1px solid transparent;
-}
-a.with-icon.underline .text {
-    border-bottom-color: @linkUnderlineColor;
-}
-a.with-icon.underline:hover .text,
-a.with-icon.underline:focus .text,
-a.with-icon.underline:active .text {
-    border-bottom-color: @linkActiveUnderlineColor;
-}
-
-ul > li {
-    margin-bottom: 5px;
-}
-
-.align-left {
-    text-align: left !important;
-}
-.align-center {
-    text-align: center !important;
-}
-.align-right {
-    text-align: right !important;
-}
-
-.small {
-    font-size: 85%;
-}
-
-.text-ellipsis {
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    -o-text-overflow: ellipsis;
-}
-input.input-mini {
-    height: 16px;
-    padding: 2px 3px;
-    font-size: 13px;
-    line-height: 16px;
-
-    -webkit-border-radius: 3px;
-       -moz-border-radius: 3px;
-            border-radius: 3px;
-}
-
-/* shadows */
-.shadow-lift-lb-corner:before {
-  z-index: -2;
-  position: absolute;
-  content: "";
-  bottom: 20px;
-  right: 5px;
-  left: 10px;
-  top: 0;
-
-  background-color: @defaultShadowColor;
-
-  -webkit-box-shadow: 0 15px 10px @defaultShadowColor;
-     -moz-box-shadow: 0 15px 10px @defaultShadowColor;
-          box-shadow: 0 15px 10px @defaultShadowColor;
-
-  -webkit-transform: rotate(1deg);
-     -moz-transform: rotate(1deg);
-      -ms-transform: rotate(1deg);
-       -o-transform: rotate(1deg);
-          transform: rotate(1deg);
-}
-.shadow-lift-lb-corner.strong:before {
-  bottom: 18px;
-}
-.shadow-lift-lb-corner:after {
-  z-index: -1;
-  position: absolute;
-  content: "";
-  left: 0;
-  top: -10px;
-  right: -10px;
-  bottom: 0;
-}
-
-/* icons */
-.icon.large {
-    padding-right: 2px;
-    font-size: 150%;
-    vertical-align: -5px;
-}
-.icon.big {
-    p-right: 5px;
-    vertical-align: -6px;
-    font-size: 200%;
-}
-
-/* autokad */
-@import './autokad.less';
