--- a/src/autokad/views/autokad.html
+++ b/src/autokad/views/autokad.html
@@ -1,3 +1,3 @@
 <div>
-    <h1>${_trc("Арбитражные дела — НКБ", "Наименование приложения")}</h1>
+    <a class="underline" href="http://kad.arbitr.ru/" target="_blank">${_trc("Арбитражные дела — НКБ", "Наименование приложения")}</a>
 </div>
