--- a/src/autokad/views/autokad.html
+++ b/src/autokad/views/autokad.html
@@ -1,8 +1,8 @@
 <h5 class="search-header">
-    <div class="" ng-show="true">150 000 ${_tr("арбитражных дел")}</div>
-    <div class="" ng-show="true">${_tr("Нет арбитражных дел")}</div>
+    <div class="" ng-hide="search.isEmptyResult()"><ng-pluralize count="count = search.getTotal()" when="::${_tr("NG_PLURALIZE::KAD_SEARCH_TOTAL")}"></ng-pluralize></div>
+    <div class="" ng-show="search.isEmptyResult()">${_tr("Нет арбитражных дел")}</div>
 </h5>
-<div class="row filters">
+<div class="row filters" ng-hide="search.isNoResult()">
     <div class="span3">
         <select class="span3" ng-model="search.params.source">
             <option value="name">${_tr("Искать по наименованию")}</option>
@@ -21,8 +21,8 @@
         <p><a class="underline" href="http://kad.arbitr.ru/" target="_blank">${_tr("Картотека арбитражных дел")}</a></p>
     </div>
 </div>
-<div class="search-result">
-    <table class="table table-striped" ng-show="true">
+<div class="search-result" ng-hide="search.isNoResult()">
+    <table class="table table-striped" ng-hide="search.isEmptyResult()">
         <thead>
             <tr>
                 <th>${_trc("Дело", "Арбитражное дело")}</th>
@@ -51,7 +51,50 @@
                     <span class="respondents-address">350000, Россия, г. Краснодар, Краснодарский край, ул. Орджоникидзе, 47</span>
                 </td>
             </tr>
+            <tr ng-repeat="item in search.result.Items track by $index">
+                <td>
+                    <span class="case-type badge">{{_tr(item.CaseType)}}</span>
+                    <span class="case-date">{{item.Date | date:'dd.MM.yyyy'}}</span>
+                    <a class="underline case-link" ng-href="http://kad.arbitr.ru/Card/{{item.CaseId}}" target="_blank">{{item.CaseNumber}}</a>
+                </td>
+                <td>
+                    <span class="case-judge">{{item.Judge}}</span>
+                    <span class="case-court">{{item.CourtName}}</span>
+                </td>
+                <td>
+                    <div class="participant participant-first">
+                        <span class="participant-name">{{item.Plaintiffs.Participants[0].Name}}</span>
+                        <span class="participant-address">{{item.Plaintiffs.Participants[0].Address}}</span>
+                        <span class="participant-more-info" ng-show="item.Plaintiffs.Count > 1"><a ng-click="item.__more = !item.__more">{{item.Plaintiffs.Count | number}}</a></span>
+                    </div>
+                    <div class="participant-more-items" ng-show="item.__more">
+                        <div class="participant" ng-repeat="participant in item.Plaintiffs.Participants track by $index" ng-show="$index > 0">
+                            <span class="participant-name">{{participant.Name}}</span>
+                            <span class="participant-address">{{participant.Address}}</span>
+                        </div>
+                        <div class="participant-detailed" ng-show="item.Plaintiffs.Count > item.Plaintiffs.Participants.length">
+                            <a class="underline" ng-href="http://kad.arbitr.ru/Card/{{item.CaseId}}" target="_blank">${_tr("Подробнее...")}</a>
+                        </div>
+                    </div>
+                </td>
+                <td>
+                    <div class="participant participant-first">
+                        <span class="participant-name">{{item.Respondents.Participants[0].Name}}</span>
+                        <span class="participant-address">{{item.Respondents.Participants[0].Address}}</span>
+                        <span class="participant-more-info" ng-show="item.Respondents.Count > 1"><a ng-click="item.__more = !item.__more">{{item.Respondents.Count | number}}</a></span>
+                    </div>
+                    <div class="participant-more-items" ng-show="item.__more">
+                        <div class="participant" ng-repeat="participant in item.Respondents.Participants track by $index" ng-show="$index > 0">
+                            <span class="participant-name">{{participant.Name}}</span>
+                            <span class="participant-address">{{participant.Address}}</span>
+                        </div>
+                        <div class="participant-detailed" ng-show="item.Respondents.Count > item.Respondents.Participants.length">
+                            <a class="underline" ng-href="http://kad.arbitr.ru/Card/{{item.CaseId}}" target="_blank">${_tr("Подробнее...")}</a>
+                        </div>
+                    </div>
+                </td>
+            </tr>
         </tbody>
     </table>
-    <div class="align-center muted" ng-show="true">${_tr("Арбитражных дел не найдено")}</div>
+    <div class="align-center empty-result muted" ng-show="search.isEmptyResult()">${_tr("Арбитражных дел не найдено")}</div>
 </div>
