Подсветка компании в списке дел

--- a/src/autokad/styles/autokad.less
+++ b/src/autokad/styles/autokad.less
@@ -50,6 +50,10 @@
 [np-autokad] .search-result .participant-more-items .participant {
     padding-bottom: 20px;
 }
+[np-autokad] .search-result .participant b {
+    font-weight: normal;
+    background-color: #ffff00;
+}
 
 [np-autokad] .search-result .participant-name {
     display: block;
