--- a/src/autokad/styles/autokad.less
+++ b/src/autokad/styles/autokad.less
@@ -3,6 +3,29 @@
  *
  */
 
+ @import './config.less';
+
+[np-autokad] {
+    position: relative;
+}
+
+[np-autokad] .mask {
+    position: absolute;
+    z-index: 10;
+    display: none;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+
+    background-color: @defaultBackgroundColor;
+    opacity: 0.7;
+    filter: alpha(opacity=70);
+}
+[np-autokad].loading .mask {
+    display: block;
+}
+
 [np-autokad] .filters {
     padding: 10px 0;
 }
