--- a/src/autokad/views/autokad.html
+++ b/src/autokad/views/autokad.html
@@ -1,3 +1,4 @@
+<div class="mask"></div>
 <h5 class="search-header">
     <div class="" ng-hide="search.isEmptyResult()"><ng-pluralize count="count = search.getTotal()" when="::${_tr("NG_PLURALIZE::KAD_SEARCH_TOTAL")}"></ng-pluralize></div>
     <div class="" ng-show="search.isEmptyResult()">${_tr("Нет арбитражных дел")}</div>
@@ -31,9 +32,10 @@
                 <th class="respondent">${_trc("Ответчик", "Арбитражное дело")}</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody infinite-scroll="search.pager.nextPage()" infinite-scroll-disabled="search.pager.isDisabled()" infinite-scroll-distance="0" infinite-scroll-immediate-check="false">
             <tr ng-repeat="item in search.result.Items track by $index">
                 <td>
+                    <p>{{$index + 1}}</p>
                     <span class="case-info"><span class="case-type badge">{{_tr(item.CaseType)}}</span><span class="case-date">{{item.Date | date:'dd.MM.yyyy'}}</span></span>
                     <a class="underline case-link" ng-href="http://kad.arbitr.ru/Card/{{item.CaseId}}" target="_blank">{{item.CaseNumber}}</a>
                 </td>
@@ -47,13 +49,13 @@
                             <a ng-click="item.__more = !item.__more">{{item.Plaintiffs.Count | number}}...</a>
                         </div>
                         <div class="participant">
-                            <span class="participant-name" ng-bind-html="item.Plaintiffs.Participants[0].Name | highlightSearch:search.request.q"></span>
+                            <span class="participant-name" ng-bind-html="item.Plaintiffs.Participants[0].Name | highlightSearch:search.requestData.q"></span>
                             <span class="participant-address muted">{{item.Plaintiffs.Participants[0].Address}}</span>
                         </div>
                     </div>
                     <div class="participant-more-items" ng-show="item.__more">
                         <div class="participant" ng-repeat="participant in item.Plaintiffs.Participants track by $index" ng-show="$index > 0">
-                            <span class="participant-name" ng-bind-html="participant.Name | highlightSearch:search.request.q"></span>
+                            <span class="participant-name" ng-bind-html="participant.Name | highlightSearch:search.requestData.q"></span>
                             <span class="participant-address muted">{{participant.Address}}</span>
                         </div>
                         <div class="participant-detailed" ng-show="item.Plaintiffs.Count > item.Plaintiffs.Participants.length">
@@ -67,13 +69,13 @@
                             <a ng-click="item.__more = !item.__more">{{item.Respondents.Count | number}}...</a>
                         </div>
                         <div class="participant">
-                            <span class="participant-name" ng-bind-html="item.Respondents.Participants[0].Name | highlightSearch:search.request.q"></span>
+                            <span class="participant-name" ng-bind-html="item.Respondents.Participants[0].Name | highlightSearch:search.requestData.q"></span>
                             <span class="participant-address muted">{{item.Respondents.Participants[0].Address}}</span>
                         </div>
                     </div>
                     <div class="participant-more-items" ng-show="item.__more">
                         <div class="participant" ng-repeat="participant in item.Respondents.Participants track by $index" ng-show="$index > 0">
-                            <span class="participant-name" ng-bind-html="participant.Name | highlightSearch:search.request.q"></span>
+                            <span class="participant-name" ng-bind-html="participant.Name | highlightSearch:search.requestData.q"></span>
                             <span class="participant-address muted">{{participant.Address}}</span>
                         </div>
                         <div class="participant-detailed" ng-show="item.Respondents.Count > item.Respondents.Participants.length">
