Вывод номера элемента списка дел (скрыто)

--- a/src/autokad/styles/autokad.less
+++ b/src/autokad/styles/autokad.less
@@ -40,6 +40,18 @@
     min-width: 200px;
 }
 
+/*[np-autokad] .search-result td .td-wrapper {
+    position: relative;
+}*/
+
+/*[np-autokad] .search-result .item-number {
+    display: block;
+    position: absolute;
+    right: 100%;
+    padding-right: 10px;
+    white-space: nowrap;
+    text-align: right;
+}*/
 [np-autokad] .search-result .case-info {
     display: block;
     white-space: nowrap;
