Фиксированная ширина столбцов таблицы списка дел

--- a/src/autokad/styles/autokad.less
+++ b/src/autokad/styles/autokad.less
@@ -36,8 +36,14 @@
 [np-autokad] .search-result table thead th {
     vertical-align: top;
 }
+[np-autokad] .search-result th.case {
+    width: 120px;
+}
 [np-autokad] .search-result th.court {
-    min-width: 200px;
+    width: 200px;
+}
+[np-autokad] .search-result th.plaintiff {
+    width: 280px;
 }
 
 /*[np-autokad] .search-result td .td-wrapper {
