--- a/src/nkb-app/styles/app.less
+++ b/src/nkb-app/styles/app.less
@@ -6,3 +6,12 @@
 */
 
 @import './config.less';
+
+[np-autokad] {
+    padding: 20px 0;
+}
+
+[np-autokad] .search-result table thead th {
+    font-weight: normal;
+    color: @defaultHeaderLightColor;
+}
