Resolve #11: Фильтр по типам дел

--- a/src/autokad/styles/autokad.less
+++ b/src/autokad/styles/autokad.less
@@ -35,13 +35,23 @@
     filter: alpha(opacity=20);
 }
 
-[np-autokad] .search-header {
-    margin-top: 5px;
-    margin-bottom: 0;
-}
-
 [np-autokad] .filters {
     padding: 10px 0;
+}
+[np-autokad] .filters .span3 {
+    width: 175px;
+}
+[np-autokad] .filters .span2 {
+    width: 135px;
+}
+[np-autokad] .filters .search-header {
+    margin-top: 5px;
+    margin-bottom: 0;
+    width: 200px;
+}
+[np-autokad] .filters .period-filter,
+[np-autokad] .filters .case-type-filter {
+    margin-left: 5px;
 }
 [np-autokad] .filters .arbitr-link-box {
     padding-top: 5px;
